--- a/src/main/resources/META-INF/property/mail.properties
+++ b/src/main/resources/META-INF/property/mail.properties
@@ -1,4 +1,4 @@
 mail.host=smtp.gmail.com
 mail.port=587
-mail.username=alipheese93@gmail.com
-mail.passwoard=jxcxsnwvlcffyily
+mail.username=sykim789456@gmail.com
+mail.password=cngclkpesurcqpsy
