--- a/pom.xml
+++ b/pom.xml
@@ -163,8 +163,36 @@
 			<version>1.3.1</version>
 		</dependency>
 		
-		 
+		<!-- aop 기능 -->
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjweaver</artifactId>
+			<version>1.7.4</version>
+		</dependency>
+		<dependency>
+	        <groupId>cglib</groupId>
+	        <artifactId>cglib</artifactId>
+	        <version>2.2</version>
+		</dependency>
+		
+		
+		 <!-- 아임포트 -->
+		 <dependency>
+		  <groupId>com.github.iamport</groupId>
+		  <artifactId>iamport-rest-client-java</artifactId>
+		  <version>0.2.14</version>
+		</dependency>
+		
 	</dependencies>
+	
+	<!-- 아임포트 -->
+	<repositories>
+	  <repository>
+	    <id>jitpack.io</id>
+	    <url>https://jitpack.io</url>
+	  </repository>
+	</repositories>
+	
     <build>
         <plugins>
             <plugin>
