--- a/pom.xml
+++ b/pom.xml
@@ -175,13 +175,20 @@
 	        <version>2.2</version>
 		</dependency>
 		
-		
 		 <!-- 아임포트 -->
 		 <dependency>
 		  <groupId>com.github.iamport</groupId>
 		  <artifactId>iamport-rest-client-java</artifactId>
 		  <version>0.2.14</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/com.oracle.database.jdbc/ojdbc6 -->
+		<dependency>
+		    <groupId>com.oracle.database.jdbc</groupId>
+		    <artifactId>ojdbc6</artifactId>
+		    <version>11.2.0.4</version>
+		</dependency>
+		
 		
 	</dependencies>
 	
